# gml

./: CMakeLists.txt  readme.txt  redirect.txt
src/: console.c  console.h  hooks.c  hooks.h  logging.c  logging.h  main.c  path.c  path.h  self_inject.c  self_inject.h
